rust/core/src/utils/snapshots/lucid_suggest_core__utils__trigrams__tests__trigrams_basic-5.snap
---
source: src/utils/trigrams.rs
expression: output
---
[
    [
        'f',
        '\u{0}',
        '\u{0}',
    ],
    [
        'f',
        'o',
        '\u{0}',
    ],
    [
        'f',
        'o',
        'o',
    ],
    [
        'o',
        'o',
        'b',
    ],
]
